--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,21 @@
-@import url("https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300&display=swap");
-
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap');
 body {
 	background-color: #eaeaea;
 	scroll-behavior: smooth;
-	font-family: "Space Grotesk", sans-serif;
+	font-family: 'Quicksand', sans-serif !important;
 }
+
+/* product */
+
+.product img{
+	height: 200px !important;
+}
+.product .card-title{
+	font-size: 16px !important;
+	font-weight: 800 !important;
+}
+.product .list-group-item{
+	font-size: 14px !important;
+}
+/* product */
+
